GPUDirect RDMA: Added support for Nvidia GPUDirect RDMA
This allows us to send/receive messages directly into GPU memory.
EXamples have also been added to demonstrate the working. Also updated
the README.md

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -24,6 +24,12 @@ endif()
 set(SOURCE_FILES ${sources} ${os_sources})
 include_directories(. common ${OS_HEADERS} ${RDMA_HEADER_DIR})
 
+# Find CUDA for GPU Direct RDMA support
+find_package(CUDAToolkit QUIET)
+if(CUDAToolkit_FOUND)
+    message(STATUS "CUDA Toolkit found: ${CUDAToolkit_VERSION}")
+endif()
+
 # This defines the variables Boost_LIBRARIES that containts all library names
 # that we need to link into the program.
 find_package(Boost COMPONENTS system thread filesystem REQUIRED )
@@ -35,6 +41,11 @@ set_target_properties(easyrdma PROPERTIES SOVERSION 1)
 set(CMAKE_SKIP_RPATH TRUE)
 
 target_link_libraries(easyrdma PRIVATE ${Boost_LIBRARIES})
+
+# Link CUDA libraries if available
+if(CUDAToolkit_FOUND)
+    target_link_libraries(easyrdma PRIVATE CUDA::cudart)
+endif()
 
 if(WIN32)
     target_link_libraries(easyrdma PRIVATE ws2_32 ${NetDirect_LIBRARYDIR}/ndutil.lib)
